tests/generated/184_wordwrap.out
Fatal error: Call to undefined method DtlIter::wordwrap() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/184_wordwrap.php on line 4